--- a/fouryears/templates/index.html
+++ b/fouryears/templates/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>开始使用layui</title>
-  <link rel="stylesheet" href="./layui/css/layui.css">
-  <link rel="stylesheet" href="./css/app.css">
+  <link rel="stylesheet" href="/static/layui/css/layui.css">
+  <link rel="stylesheet" href="/static/css/app.css">
 </head>
 <body>
   <div class="layui-row">
     <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
       <div class="img-inner">
       	<div class="item">
-      		<img src="./images/banner.jpg">
+      		<img src="/static/images/banner.jpg">
       	</div>
       </div>
     </div>
@@ -36,9 +36,9 @@
 
 </footer>
 </body>
-<script src="./layui/layui.js"></script>
-<script src="./js/app.js"></script>
-<script type="text/javascript" src="./js/wangEditor.min.js"></script>
-<script type="text/javascript" src="./js/myEditor.js"></script>
+<script src="/static/layui/layui.js"></script>
+<script src="/static/js/app.js"></script>
+<script type="text/javascript" src="/static/js/wangEditor.min.js"></script>
+<script type="text/javascript" src="/static/js/myEditor.js"></script>
 </html>
       
