--- a/fouryears/templates/sendMail.html
+++ b/fouryears/templates/sendMail.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>开始使用layui</title>
-  <link rel="stylesheet" href="./layui/css/layui.css">
+  <link rel="stylesheet" href="/static/layui/css/layui.css">
 </head>
 <body>
 <div class="layui-container" style="margin-top:2rem;">
@@ -30,7 +30,7 @@
   </form>
 </div>
 </body>
-<script src="./layui/layui.js"></script>
+<script src="/static/layui/layui.js"></script>
 <script type="text/javascript">
 layui.use(['layer','jquery', 'form','laydate'], function(){
   var layer = layui.layer
